--- a/app/src/public/about.html
+++ b/app/src/public/about.html
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 text-center">
+            <!-- <div class="col-md-4 text-center">
                 <div class="thumbnail">
                     <img class="img-responsive" src="images/tejas.jpg" alt="">
                     <div class="caption">
@@ -177,7 +177,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
 </div></div>
 <div class="w3-container w3-black w3-center w3-allerta">
    <p class="w3-xlarge"><br>
