--- a/app/src/public/webhook.html
+++ b/app/src/public/webhook.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
